FEAT-4070: Add event hub producer