@@ -3,16 +3,13 @@ package com.pe.customermanagement.service;
 import com.azure.messaging.eventhubs.EventData;
 import com.azure.messaging.eventhubs.EventHubProducerAsyncClient;
 import com.pe.customermanagement.common.Util;
-import com.pe.customermanagement.model.CreateCustomerResponse;
-import com.pe.customermanagement.model.CustomerRequest;
-import com.pe.customermanagement.model.CustomerTraceEvent;
-import com.pe.customermanagement.model.HeaderRequest;
+import com.pe.customermanagement.dto.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static com.pe.customermanagement.common.Constant.APPLICATION;
@@ -29,9 +26,10 @@ public class TraceProducerService {
                             CreateCustomerResponse response,
                             HeaderRequest headerRequest) {
         String message = buildCustomerTraceEvent(request, response, headerRequest);
+        log.info("Sending message to Event Hub: {}", message);
         EventData eventData = new EventData(message);
-        producer.send(Arrays.asList(eventData))
-                .doOnNext(x -> log.info("Message sent: {}", message));
+        producer.send(List.of(eventData))
+                .subscribe();;
     }
 
     public String buildCustomerTraceEvent(CustomerRequest request,
